--- a/css/style.css
+++ b/css/style.css
@@ -278,6 +278,26 @@ table {
 	  min-width: 100%;
 	}
 
+	aside {
+		display: flex ;
+	}
+
+	.aside-post {
+		flex: 1;
+		padding: 10px;
+	}
+
+	.subscribe {
+		flex: 1;
+		padding: 20px;
+	}
+
+	h5 {
+		padding: 0;
+	}
+
+
+
   }
 	
   /* Laptops and Larger screens */
@@ -295,5 +315,24 @@ table {
 	.right-column {
 	  min-width: 100%;
 	}
+
+	aside {
+		display: flex ;
+	}
+
+	.aside-post {
+		flex: 1;
+		padding: 10px;
+	}
+
+	.subscribe {
+		flex: 1;
+		padding: 20px;
+	}
+
+	h5 {
+		padding: 0;
+	}
+
   }
   
